--- a/AM/src/main/webapp/resources/css/style.css
+++ b/AM/src/main/webapp/resources/css/style.css
@@ -7,9 +7,7 @@
 
 /* font */
 
-
-
-/* 에스코어드림Reg */
+/* 에스코어드림Reg(regular)*/
 @font-face {
   font-family: 'S-CoreDream-4Regular';
   src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_six@1.2/S-CoreDream-4Regular.woff') format('woff');
@@ -17,7 +15,7 @@
   font-style: normal;
 }
 
-/* 에스코어드림B */
+/* 에스코어드림B(bold)*/
 @font-face {
   font-family: 'S-CoreDream-6Bold';
   src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_six@1.2/S-CoreDream-6Bold.woff') format('woff');
@@ -26,7 +24,7 @@
 }
 
 
-/* 에스코어드림Hvy */
+/* 에스코어드림Hvy(heavy) */
 @font-face {
   font-family: 'S-CoreDream-8Heavy';
   src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_six@1.2/S-CoreDream-8Heavy.woff') format('woff');
