--- a/AM/.settings/org.eclipse.wst.common.component
+++ b/AM/.settings/org.eclipse.wst.common.component
@@ -7,6 +7,6 @@
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/test/resources"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/test/java"/>
 		<property name="java-output-path" value="target/classes"/>
-        <property name="context-root" value="am1"/>
+        <property name="context-root" value="am"/>
 	</wb-module>
 </project-modules>
