--- a/AM/src/main/webapp/resources/css/calendar.css
+++ b/AM/src/main/webapp/resources/css/calendar.css
@@ -19,7 +19,7 @@ td.fc-today {
 }
 .fc-event-inner {
   font-family: 'S-CoreDream-4Regular';
-  background: #FEEBB6;
+  background: #ffd150;
   color: rgba(0, 0, 0, 0.8) !important;
   font-size: 12px !important;
   font-weight: 400 !important;
@@ -99,7 +99,7 @@ span.fc-button {
 .fc-state-down,
 .fc-state-active {
   background-color: transparent !important;
-  color: #FEEBB6 !important;
+  color: #c7a953 !important;
   font-weight: 600;
 }
   
