--- a/AM/src/main/webapp/resources/css/style.css
+++ b/AM/src/main/webapp/resources/css/style.css
@@ -8869,7 +8869,7 @@ textarea.form-control {
     box-shadow: 0px 24px 48px -13px rgba(0, 0, 0, 0.11); }
 
 .ftco-section {
-  padding: 6em 0;
+  padding: 0 0 10em 0;
   position: relative; }
   @media (max-width: 767.98px) {
     .ftco-section {
@@ -8991,7 +8991,7 @@ textarea.form-control {
 
 .ftco-footer-social li {
   list-style: none;
-  margin: 0 10px 0 0;
+  margin: 0 5px 0 0;
   display: inline-block; }
   .ftco-footer-social li a {
     height: 50px;
